[package]
name = "relay-bp"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "relay_bp"
path = "src/lib.rs"

[dependencies]
env_logger = { version = "0.11", default-features = false, features = [
    "color",
] }
fixed = { version = "1.28", features = ["num-traits"]}
log = { version = "0.4", features = ["release_max_level_warn"]}
indicatif = {workspace = true, features = ["rayon"]}
itertools = "0.13"
ndarray = {workspace = true, features = ["serde", "rayon"]}
ndarray-npy = {workspace = true}
num-traits = "0.2"
rayon = {workspace = true}
sprs = {workspace = true, features = ["serde"]}
serde = {workspace = true, features = ["derive"]}
dyn-clone = "1.0"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5"}
ndarray-npy = "0.9.1"

[[bench]]
name = "min_sum"
harness = false

[[bench]]
name = "relay"
harness = false


[lints]
workspace = true
